--- a/bibliography/src/components/Footer/styles.css
+++ b/bibliography/src/components/Footer/styles.css
@@ -5,7 +5,6 @@
     text-align: center;
 }
 
-.page-footer, .footer-copyright {
-    max-height: 80px;
-    padding: 0px 0px !important;
+.footer-copyright {
+    padding: 0;
 }
